fix test failures; bump gradle version